fixing overflow hidden issue

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: Inter, Helvetica, Arial, sans-serif;
+	scroll-behavior: smooth;
 }
 
 body {
@@ -208,11 +209,12 @@ main {
 	padding: 5px;
 	text-align: center;
 }
-html,
-body {
-	overflow-x: hidden;
-}
+
 @media (max-width: 815px) {
+	html,
+	body {
+		overflow-x: hidden;
+	}
 	.mobile-icons {
 		display: block;
 	}
